--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <script src="app.js"></script>
     <script src="https://accounts.google.com/gsi/client" async></script>
     <h1>My Awesome App</h1>
+    <button onclick="onLinkAdsAccount()">Link GoogleAds Account</button>
     <div
       id="g_id_onload"
       data-client_id="677227584388-q9tnon2q4mjmu62kvo0v3009uttsac44.apps.googleusercontent.com"
